--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -65,5 +65,5 @@
 
   <button id="add-account-btn" class="btn btn-outline-secondary mt-3" data-action="click->admin--emission-form#createNewAccountForm"><%= t('admin.emissions.form.add_account_btn') %></button>
 
-  <%= render 'admin/shared/form_actions',  cancel_path: admin_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
