--- a/app/views/admin/publicites/_form.html.erb
+++ b/app/views/admin/publicites/_form.html.erb
@@ -32,5 +32,5 @@
       <%= form.file_field :image, class: "form-control" %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions', cancel_path: admin_publicites_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
