--- a/app/views/admin/categorie_emissions/_form.html.erb
+++ b/app/views/admin/categorie_emissions/_form.html.erb
@@ -10,5 +10,5 @@
       <%= form.color_field :couleur, class: "form-control form-control-color" %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions',  cancel_path: admin_categorie_emissions_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
