--- a/app/views/admin/categorie_emissions/index.html.erb
+++ b/app/views/admin/categorie_emissions/index.html.erb
@@ -2,15 +2,22 @@
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.categorie_emissions.create_category_btn'), btn_path:  new_admin_categorie_emission_path %>
 
-<% @categories.each do |categorie| %>
-  <div class="card">
-    <div class="card-body" style="background-color: <%= categorie.couleur %>">
-      <p class="float-end">
-        <%=  link_to bootstrap_icon(:pencil), edit_admin_categorie_emission_path(categorie)%>
-        <%=  link_to bootstrap_icon(:trash), admin_categorie_emissions_path(categorie), data: { turbo_method: :delete, turbo_confirm: t('admin.pub.error.pub_deleted')}%>
-      </p>
-      <p class="card-text">
-        <%= categorie.nom %></p>
-    </div>
-  </div>
-<% end %>
+<table class="table">
+  <thead>
+    <th>Nom</th>
+    <th>Couleur</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <% @categories.each do |categorie| %>
+      <tr>
+        <td><%= categorie.nom %></td>
+        <td><span class="color-pellet" style="background-color: <%= categorie.couleur %>;"></span></td>
+        <td>
+          <%=  link_to bootstrap_icon(:pencil), edit_admin_categorie_emission_path(categorie)%>
+          <%=  link_to bootstrap_icon(:trash), admin_categorie_emissions_path(categorie), data: { turbo_method: :delete, turbo_confirm: t('admin.pub.error.pub_deleted')}%>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
