--- a/app/views/admin/membres/_form.html.erb
+++ b/app/views/admin/membres/_form.html.erb
@@ -50,5 +50,5 @@
     </div>
   </div>
 
-  <%= render 'admin/shared/form_actions', cancel_path: admin_membres_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
