--- a/app/views/admin/tags/_form.html.erb
+++ b/app/views/admin/tags/_form.html.erb
@@ -6,5 +6,5 @@
     </div>
   </div>
 
-  <%= render 'admin/shared/form_actions', cancel_path: admin_tags_path, button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
