Refactor emission nested_forms to have better js

--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -40,50 +40,33 @@
 
   <h5>Équipe</h5>
   <%= form.fields_for :membre_equipes do |equipe_form| %>
-    <%= equipe_form.hidden_field :id %>
-    <div class="mb-3" data-admin--emission-form-target="membreEquipeFieldset">
-      <div class="row">
-        <div class="col-lg-6">
-          <%= equipe_form.label :nom %>
-          <%= equipe_form.text_field :nom, class: 'form-control' %>
-        </div>
-        <div class="col-lg-6">
-          <%= equipe_form.label :role %>
-          <%= equipe_form.text_field :role, class: 'form-control' %>
-        </div>
-      </div>
-    </div>
+    <%= render 'admin/emissions/membre_equipe_form', form: equipe_form %>
   <% end %>
-  <button id="add-membre-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#createNewMembreForm"><%= t('admin.emissions.form.add_membre_btn') %></button>
+
+  <template data-admin--emission-form-target="equipeTemplate">
+    <%= form.fields_for :membre_equipes, MembreEquipe.new, child_index: 'NEW_RECORD' do |equipe_form| %>
+      <%= render 'admin/emissions/membre_equipe_form', form: equipe_form %>
+    <% end %>
+  </template>
+
+  <div data-admin--emission-form-target="equipeTarget"></div>
+
+  <button id="add-membre-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#newMembre"><%= t('admin.emissions.form.add_membre_btn') %></button>
 
   <h5>Médias sociaux</h5>
   <%= form.fields_for :social_media_accounts do |account_form| %>
-    <%= account_form.hidden_field :id %>
-    <div class="mb-3" data-admin--emission-form-target="socialNetworkFieldset">
-      <div class="row">
-        <div class="col-lg">
-          <%= account_form.label :platform, t('admin.emissions.form.account_platform'), class: 'form-label' %>
-          <%= account_form.select :platform, options_for_select(SocialMediaAccount.platforms.keys.map { |p| [p.titleize, p] }, account_form.object.platform), {}, class: 'form-select' %>
-          <%# TODO: Add a checkbox here to delete the account %>
-        </div>
-        <div class="col-lg">
-          <%= account_form.label :nom, t('admin.emissions.form.platform_name'), class: 'form-label' %>
-          <%= account_form.text_field :nom, class: 'form-control' %>
-          <small class="text-muted">
-            <%= t('admin.emissions.form.platform_name_help') %>
-          </small>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg">
-          <%= account_form.label :url, t('admin.emissions.form.account_url'), class: 'form-label' %>
-          <%= account_form.text_field :url, class: 'form-control' %>
-        </div>
-      </div>
-    </div>
+    <%= render 'admin/emissions/media_sociaux_form', form: account_form %>
   <% end %>
 
-  <button id="add-account-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#createNewAccountForm"><%= t('admin.emissions.form.add_account_btn') %></button>
+  <template data-admin--emission-form-target="mediaSociauxTemplate">
+    <%= form.fields_for :social_media_accounts, SocialMediaAccount.new, child_index: 'NEW_RECORD' do |account_form| %>
+      <%= render 'admin/emissions/media_sociaux_form', form: account_form %>
+    <% end %>
+  </template>
+
+  <div data-admin--emission-form-target="mediaSociauxTarget"></div>
+
+  <button id="add-account-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#addMediaSociaux"><%= t('admin.emissions.form.add_account_btn') %></button>
 
   <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
 <% end %>
