--- a/app/views/admin/shared/_nav.html.erb
+++ b/app/views/admin/shared/_nav.html.erb
@@ -37,6 +37,9 @@
             <li class="nav-item">
               <%= link_to t('admin.nav.memberships'), admin_memberships_path, class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to t('admin.nav.articles'), admin_articles_path, class: 'nav-link' %>
+            </li>
           <% end %>
         </ul>
         <ul class="navbar-nav ms-auto">
