Fix create article btn label

--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -22,4 +22,4 @@
   </tbody>
 </table>
 
-<%= render 'admin/shared/create_item_button', btn_label: t('admin.tags.create_article_btn'), btn_path: new_admin_article_path %>
+<%= render 'admin/shared/create_item_button', btn_label: t('admin.articles.create_btn'), btn_path: new_admin_article_path %>
