--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="container flex-shrink-0 p-3 mb-3">
   <div class="row">
     <div class="col-lg-6">
-      <h4 class="mb-3">CKIA ailleurs sur le Web</h4>
+      <h4 class="mb-3">Ailleurs sur le Web</h4>
       <%= link_to bootstrap_icon(:facebook), "https://facebook.com/ckiafm", class: 'social-link' %>
       <%= link_to bootstrap_icon(:youtube), "https://www.youtube.com/channel/UCAMN64R7HtbAKQOK_Om3Lag", class: 'social-link' %>
       <%= link_to bootstrap_icon(:instagram), "https://www.instagram.com/ckiafm88.3/", class: 'social-link' %>
