--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,6 +15,9 @@
           <a class="nav-link" href="#">Balados</a>
         </li>
         <li class="nav-item">
+          <%= link_to "Blog", blog_index_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">À propos</a>
         </li>
         <li class="nav-item">
