--- a/app/views/blog/show.html.erb
+++ b/app/views/blog/show.html.erb
@@ -1,5 +1,5 @@
 <article class="blog-article">
   <h1><%= @article.titre %></h1>
-  <p class="fs-8 fw-light"><%= @article.published_at %></p>
+  <%= render 'blog/article_date', date: @article.published_at %>
   <%= render_markdown @article.contenu %>
 </article>
