--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -17,6 +17,14 @@
   </div>
   <div class="row">
     <div class="col">
+      <div class="col-lg-6">
+      <%= form.label :tag_ids, t('admin.articles.form.tags'), class: 'form-label' %>
+      <%= form.select :tag_ids, options_from_collection_for_select(@tags, :id, :nom, @article.tag_ids), { multiple: true }, class:"form-select" %>
+    </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
       <%= form.label :contenu %>
       <%= form.text_area :contenu, class: 'form-control' %>
     </div>
