Move nav translation out of the admin namespace

--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.articles') %>
+<%= render 'admin/shared/page_header', titre: t('nav.articles') %>
 
 <table class="table">
   <thead>
