--- a/app/views/admin/memberships/index.html.erb
+++ b/app/views/admin/memberships/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.memberships') %>
+<%= render 'admin/shared/page_header', titre: t('nav.memberships') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.memberships.create_btn'), btn_path: new_admin_membership_path %>
 
