--- a/app/views/admin/membres/index.html.erb
+++ b/app/views/admin/membres/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.membres') %>
+<%= render 'admin/shared/page_header', titre: t('nav.membres') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.membres.create_btn'), btn_path: new_admin_membre_path %>
 
