--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.tags') %>
+<%= render 'admin/shared/page_header', titre: t('nav.tags') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.tags.create_tag_btn'), btn_path: new_admin_tag_path %>
 
