--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.users') %>
+<%= render 'admin/shared/page_header', titre: t('nav.users') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.users.create_user_btn'), btn_path: new_admin_user_path %>
 
