--- a/app/views/admin/categorie_emissions/index.html.erb
+++ b/app/views/admin/categorie_emissions/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.show_categories') %>
+<%= render 'admin/shared/page_header', titre: t('nav.show_categories') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.categorie_emissions.create_category_btn'), btn_path:  new_admin_categorie_emission_path %>
 
