--- a/app/views/admin/emissions/index.html.erb
+++ b/app/views/admin/emissions/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.shows') %>
+<%= render 'admin/shared/page_header', titre: t('nav.shows') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.emissions.create_emission_btn'), btn_path: new_admin_emission_path %>
 
