--- a/app/views/admin/publicites/index.html.erb
+++ b/app/views/admin/publicites/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'admin/shared/page_header', titre: t('admin.nav.ads') %>
+<%= render 'admin/shared/page_header', titre: t('nav.ads') %>
 
 <%= render 'admin/shared/create_item_button', btn_label: t('admin.pub.create_pub_btn'), btn_path: new_admin_publicite_path %>
 
