Display articles and tags correctly

--- a/app/views/blog/_article_tags.html.erb
+++ b/app/views/blog/_article_tags.html.erb
@@ -1,1 +1,1 @@
-<p class="fs-8 fw-light"><%= bootstrap_icon(:tag) %> <%= tags.map { |t| t.nom }.join(', ') %></p>
+<p class="fs-8 fw-light"><%= bootstrap_icon(:tag) %> <%= tags.map { |t| link_to t.nom, t}.join(', ').html_safe %></p>
