--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -1,6 +1,3 @@
 <div class="blog-width">
-<% @articles.each do |article| %>
-  <h3><%= link_to article.titre, blog_path(article), class: 'blog-index-link' %></h3>
-  <%= render 'blog/article_meta', article: article %>
-<% end %>
+  <%= render 'blog/articles_list', articles: @articles %>
 </div>
