--- a/app/views/programmations/show.html.erb
+++ b/app/views/programmations/show.html.erb
@@ -1,12 +1,3 @@
 <h1 class="mb-5">Programmation</h1>
 
-<% @diffusions.each do |diffusion| %>
-  <p class="d-flex flex-row justify-content-between align-items-center my-0">
-    <span class="fw-bold"><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %></span>
-    <span><%= link_to "#{diffusion.emission.nom}#{ if diffusion.rediffusion then ' - rediffusion' else '' end }", diffusion.emission %></span>
-    <span><%= diffusion.emission.categorie_emission.nom %></span>
-  </p>
-  <% unless diffusion == @diffusions.last %>
-    <hr>
-  <% end %>
-<% end %>
+<%= render 'diffusions/diffusions_list', diffusions: @diffusions %>
