--- a/app/views/admin/tags/_form.html.erb
+++ b/app/views/admin/tags/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @tag], local: true do |form| %>
+<%= form_with model: [:admin, tag], local: true do |form| %>
   <div class="row">
     <div class="col-lg">
       <%= form.label :nom, t('admin.tags.form.nom'), class: 'form-label' %>
