--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @user], local: true do |form| %>
+<%= form_with model: [:admin, user], local: true do |form| %>
   <div class="row">
     <div class="col-lg-6">
       <%= form.label :email %>
