--- a/app/views/admin/publicites/_form.html.erb
+++ b/app/views/admin/publicites/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @pub], local: true do |form| %>
+<%= form_with model: [:admin, pub], local: true do |form| %>
   <div class="row">
     <div class="col-lg">
       <%= form.label t('admin.pub.form.nom_label'), class: 'form-label' %>
