admin: add missing translation in diffusions form

--- a/app/views/admin/diffusions/_form.html.erb
+++ b/app/views/admin/diffusions/_form.html.erb
@@ -37,7 +37,7 @@
       <h3><%= t('admin.diffusions.form.rediffusion_header') %></h3>
       <div class="form-check form-check mb-3">
         <%= form.check_box :rediffusion, class: 'form-check-input' %>
-        <%= form.label :rediffusion, class: 'form-check-label' %>
+        <%= form.label :rediffusion, t('admin.diffusions.form.rediffusion_label'), class: 'form-check-label' %>
       </div>
     </div>
   </div>
