--- a/app/views/admin/categorie_emissions/_form.html.erb
+++ b/app/views/admin/categorie_emissions/_form.html.erb
@@ -1,12 +1,11 @@
-<h1>Enregistrer une nouvelle catégorie d'émission</h1>
 <%= form_with model: [:admin, categorie], local: true do |form| %>
   <div class="row">
     <div class="col-lg-6">
-      <%= form.label "nom de la catégorie : ", class: "form-label" %>
+      <%= form.label :nom, t('admin.categorie_emissions.form.nom_label'), class: "form-label" %>
       <%= form.text_field :nom, class: 'form-control' %>
     </div>
     <div class="col-lg-6">
-      <%= form.label "Choisir la couleur de l'émission : ", class: "form-label" %>
+      <%= form.label :couleur, t('admin.categorie_emissions.form.couleur_label'), class: "form-label" %>
       <%= form.color_field :couleur, class: "form-control form-control-color" %>
     </div>
   </div>
