--- a/app/views/admin/emissions/_media_sociaux_form.html.erb
+++ b/app/views/admin/emissions/_media_sociaux_form.html.erb
@@ -4,25 +4,25 @@
   <div class="mb-3" data-admin--emission-form-target="socialNetworkFieldset">
     <div class="row">
       <div class="col-lg">
-        <%= form.label :platform, t('admin.emissions.form.account_platform'), class: 'form-label' %>
+        <%= form.label :platform, t('admin.emissions.media_sociaux_form.platform_label'), class: 'form-label' %>
         <%= form.select :platform, options_for_select(SocialMediaAccount.platforms.keys.map { |p| [p.titleize, p] }, form.object.platform), {}, class: 'form-select' %>
       </div>
       <div class="col-lg">
-        <%= form.label :nom, t('admin.emissions.form.platform_name'), class: 'form-label' %>
+        <%= form.label :nom, t('admin.emissions.form.media_sociaux_form.nom_label'), class: 'form-label' %>
         <%= form.text_field :nom, class: 'form-control' %>
         <small class="text-muted">
-          <%= t('admin.emissions.form.platform_name_help') %>
+          <%= t('admin.emissions.form.media_sociaux_form.nom_help') %>
         </small>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-6">
-        <%= form.label :url, t('admin.emissions.form.account_url'), class: 'form-label' %>
+        <%= form.label :url, t('admin.emissions.media_sociaux_form.url_label'), class: 'form-label' %>
         <%= form.text_field :url, class: 'form-control' %>
       </div>
       <div class="col-lg-6">
         <label>&nbsp;</label>
-        <button type="button" data-action="click->admin--emission-form#deleteMediaSociaux" class="btn btn-outline-danger btn-as-block">Supprimer</button>
+        <button type="button" data-action="click->admin--emission-form#deleteMediaSociaux" class="btn btn-outline-danger btn-as-block"><%= t('admin.emissions.media_sociaux_form.delete_btn_label') %></button>
       </div>
     </div>
   </div>
