--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [:admin, @emission], local: true, data: { controller: 'admin--emission-form' } do |form| %>
+<%= form_with model: [:admin, emission], local: true, data: { controller: 'admin--emission-form' } do |form| %>
   <div class="row">
     <div class="col-lg">
       <%= form.label :nom, t('admin.emissions.form.nom'), class: 'form-label' %>
@@ -28,17 +28,17 @@
     </div>
     <div class="col-lg">
       <%= form.label :user_ids, t('admin.emissions.form.utilisateur'), class: 'form-label' %>
-      <%= form.select :user_ids, options_from_collection_for_select(@utilisateurs, :id, :email, @emission.user_ids), { multiple: true }, class: 'form-control' %>
+      <%= form.select :user_ids, options_from_collection_for_select(utilisateurs, :id, :email, emission.user_ids), { multiple: true }, class: 'form-control' %>
     </div>
   </div>
   <div class="row">
     <div class="col-lg">
       <%= form.label :tag_ids, t('admin.emissions.form.tags'), class: 'form-label' %>
-      <%= form.select :tag_ids, options_from_collection_for_select(@tags, :id, :nom, @emission.tag_ids), { multiple: true }, class:"form-select" %>
+      <%= form.select :tag_ids, options_from_collection_for_select(tags, :id, :nom, emission.tag_ids), { multiple: true }, class:"form-select" %>
     </div>
   </div>
 
-  <h5>Équipe</h5>
+  <h5><%= t('admin.emissions.form.equipe_subtitle') %></h5>
   <%= form.fields_for :membre_equipes do |equipe_form| %>
     <%= render 'admin/emissions/membre_equipe_form', form: equipe_form %>
   <% end %>
@@ -53,7 +53,7 @@
 
   <button id="add-membre-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#newMembre"><%= t('admin.emissions.form.add_membre_btn') %></button>
 
-  <h5>Médias sociaux</h5>
+  <h5><%= t('admin.emissions.form.media_sociaux_subtitle') %></h5>
   <%= form.fields_for :social_media_accounts do |account_form| %>
     <%= render 'admin/emissions/media_sociaux_form', form: account_form %>
   <% end %>
