Define default value for button_label in `form_actions` partial

--- a/app/views/admin/categorie_emissions/_form.html.erb
+++ b/app/views/admin/categorie_emissions/_form.html.erb
@@ -9,5 +9,6 @@
       <%= form.color_field :couleur, class: "form-control form-control-color" %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
+
+  <%= render 'admin/shared/form_actions' %>
 <% end %>
