--- a/app/views/admin/emissions/_form.html.erb
+++ b/app/views/admin/emissions/_form.html.erb
@@ -68,5 +68,5 @@
 
   <button id="add-account-btn" class="btn btn-outline-secondary my-3" data-action="click->admin--emission-form#addMediaSociaux"><%= t('admin.emissions.form.add_account_btn') %></button>
 
-  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions' %>
 <% end %>
