--- a/app/views/admin/shared/_form_actions.html.erb
+++ b/app/views/admin/shared/_form_actions.html.erb
@@ -1,3 +1,4 @@
+<%# locals: ( button_label: t('admin.shared.form_action.save_btn') ) %>
 <div class="my-3">
   <%= link_to t('admin.shared.form_action.back_btn'), :back, class: 'btn btn-outline-dark' %>
   <%= button_tag button_label, class: 'btn btn-outline-primary' %>
