--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -19,5 +19,6 @@
       <%= form.password_field :password_confirmation, class: 'form-control' %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
+
+  <%= render 'admin/shared/form_actions' %>
 <% end %>
