--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -30,5 +30,5 @@
     </div>
   </div>
 
-  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
+  <%= render 'admin/shared/form_actions' %>
 <% end %>
