--- a/app/views/admin/memberships/_form.html.erb
+++ b/app/views/admin/memberships/_form.html.erb
@@ -9,5 +9,6 @@
       <%= form.number_field :montant, step: 0.01, class: 'form-control' %>
     </div>
   </div>
-  <%= render 'admin/shared/form_actions', button_label: t('admin.shared.form_action.save_btn') %>
+
+  <%= render 'admin/shared/form_actions' %>
 <% end %>
