Diffusion: migrate to NaiveTime

--- a/app/views/admin/diffusions/_form.html.erb
+++ b/app/views/admin/diffusions/_form.html.erb
@@ -10,11 +10,11 @@
   <div class="row">
     <div class="col-lg">
       <%= form.label :temps_debut, t('admin.diffusions.form.temps_debut_label'), class: 'form-label' %>
-      <%= form.time_field :temps_debut, class: 'form-control' %>
+      <%= form.text_field :temps_debut, class: 'form-control' %>
     </div>
     <div class="col-lg">
       <%= form.label :temps_fin, t('admin.diffusions.form.temps_fin_label'), class: 'form-label' %>
-      <%= form.time_field :temps_fin, class: 'form-control' %>
+      <%= form.text_field :temps_fin, class: 'form-control' %>
     </div>
     <div class="col-lg">
       <%= form.label :date_debut, t('admin.diffusions.form.date_debut_label'), class: 'form-label' %>
