--- a/app/views/diffusions/_diffusions_list.html.erb
+++ b/app/views/diffusions/_diffusions_list.html.erb
@@ -1,6 +1,6 @@
 <% diffusions.each do |diffusion| %>
   <p class="d-flex flex-row justify-content-between align-items-center my-0">
-    <span class="fw-bold"><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %></span>
+    <span class="fw-bold"><%= format_time diffusion.debut %> - <%= format_time diffusion.fin %></span>
     <span><%= link_to "#{diffusion.emission.nom}#{ if diffusion.rediffusion then ' - rediffusion' else '' end }", diffusion.emission %></span>
     <span><%= diffusion.emission.categorie_emission.nom %></span>
   </p>
