--- a/app/views/emissions/show.html.erb
+++ b/app/views/emissions/show.html.erb
@@ -25,7 +25,7 @@
                 <div class="d-flex flex-row justify-content-between">
                   <h5 class="card-title d-inline-block"><%= "(R) - " if diffusion.rediffusion %><%= diffusion.type.titleize %></h5>
                 </div>
-                <p class="card-text"><%= format_time diffusion.temps_debut %> - <%= format_time diffusion.temps_fin %><br>
+                <p class="card-text"><%= format_time diffusion.debut %> - <%= format_time diffusion.fin %><br>
                 <%= diffusion.jours_diffusion_formate %></p>
               </div>
             </div>
